deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictactoe-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tictactoe
  template:
    metadata:
      labels:
        app: tictactoe
    spec:
      containers:
      - name: tictactoe-app
        image: tictactoe-app:latest
        ports:
        - containerPort: 8081
