service.yml
apiVersion: v1
kind: Service
metadata:
  name: tictactoe-service
spec:
  selector:
    app: tictactoe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
