ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tictactoe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tictactoe.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tictactoe-service
            port:
              number: 80
